syntax = "proto3";

service ChunkService {
    rpc UploadChunk(stream ChunkRequest) returns (ChunkResponse);
}

message ChunkRequest {
    string fileName = 1;
    int64 chunkIndex = 2;
    bytes chunkData = 3;
    int64 offset = 4;
}

message ChunkResponse {
    string message = 1;
    bool success = 2;
}
